# archivas-linux-gui

./: .gitignore  ARCHIVAS_INTEGRATION_COMPLETE.md  BUILD.md  BUILD_FIX_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_MACOS.md  CHANGELOG.md  CHECK_RELEASE_STATUS.md  CMakeLists.txt  CURSOR-START-HERE.md  DISTRIBUTION.md  FIX_CI_STATUS.md  FIX_INSTALL.md  HOW_TO_GET_DEB_FILES.md  IMPLEMENTATION.md  INSTALL_NOW.txt  INTEGRATION_STATUS.md  NODE_FIX_SUMMARY.md  OUT_OF_THE_BOX_SETUP.md  PUBLISH.md  QUICKSTART.md  QUICK_START.md  QUICK_START_RELEASE.md  README.md  README_BUILD.md  README_QT_MESSAGES.md  RE_RUN_RELEASE.md  SETUP_GITHUB.md  SPECIFICATION.md  STATUS.md  TESTING_GUIDE.md  THIRD_PARTY.md  TRIGGER_RELEASE_WORKFLOW.md  UI_INTEGRATION_COMPLETE.md  WHY_NO_DEB_FILES.md  build.sh  fix-install.sh  install-deps.sh  install-icon.sh  run-archivas-qt.sh  (+1 more)
.github/workflows/: build.yml  release.yml
include/qt/: archivasapplication.h  archivasnodemanager.h  archivasprocessmanager.h  archivasrpcclient.h  binarymanager.h  blockspage.h  configmanager.h  farmerpage.h  logspage.h  mainwindow.h  nodepage.h  overviewpage.h  settingsdialog.h  transactionspage.h
resources/: archivas-core.desktop
resources/binaries/: binaries.qrc
resources/genesis/: devnet.genesis.json  genesis.qrc
resources/icons/: README.md  create-icon.py  icon.qrc
scripts/: build-release.sh  create-appimage.sh  create-deb.sh  create-dmg.sh  create-info-plist.sh  setup-go-mod.sh
src/go/bridge/: CMakeLists.txt  farmer.go  farmer.h  go.mod  go.mod.template  go.sum  node.go  node.h
src/qt/: archivasapplication.cpp  archivasnodemanager.cpp  archivasprocessmanager.cpp  archivasrpcclient.cpp  binarymanager.cpp  blockspage.cpp  configmanager.cpp  farmerpage.cpp  logspage.cpp  main.cpp  mainwindow.cpp  nodepage.cpp  overviewpage.cpp  settingsdialog.cpp  transactionspage.cpp
